develop/s4/intel/2019.0.5/O/intelmpi/19.0.5/out/install.log
Sat Oct 2 07:07:29 UTC 2021
 
Installing ESMF:
 
mkdir -p /scratch/users/mpotts/intel_2019.0.5_intelmpi_O_develop/DEFAULTINSTALLDIR/include
cp -f /scratch/users/mpotts/intel_2019.0.5_intelmpi_O_develop/src/include/ESMC.h /scratch/users/mpotts/intel_2019.0.5_intelmpi_O_develop/DEFAULTINSTALLDIR/include
cp -f /scratch/users/mpotts/intel_2019.0.5_intelmpi_O_develop/src/include/ESMC_*.h /scratch/users/mpotts/intel_2019.0.5_intelmpi_O_develop/DEFAULTINSTALLDIR/include
cp -f /scratch/users/mpotts/intel_2019.0.5_intelmpi_O_develop/build_config/Linux.intel.default/ESMC_Conf.h /scratch/users/mpotts/intel_2019.0.5_intelmpi_O_develop/DEFAULTINSTALLDIR/include
mkdir -p /scratch/users/mpotts/intel_2019.0.5_intelmpi_O_develop/DEFAULTINSTALLDIR/mod/modO/Linux.intel.64.intelmpi.default
cp -f /scratch/users/mpotts/intel_2019.0.5_intelmpi_O_develop/mod/modO/Linux.intel.64.intelmpi.default/*.mod /scratch/users/mpotts/intel_2019.0.5_intelmpi_O_develop/DEFAULTINSTALLDIR/mod/modO/Linux.intel.64.intelmpi.default
mkdir -p /scratch/users/mpotts/intel_2019.0.5_intelmpi_O_develop/DEFAULTINSTALLDIR/lib/libO/Linux.intel.64.intelmpi.default
cp -f /scratch/users/mpotts/intel_2019.0.5_intelmpi_O_develop/lib/libO/Linux.intel.64.intelmpi.default/libesmf*.* /scratch/users/mpotts/intel_2019.0.5_intelmpi_O_develop/DEFAULTINSTALLDIR/lib/libO/Linux.intel.64.intelmpi.default
make ESMF_PRELOADDIR=/scratch/users/mpotts/intel_2019.0.5_intelmpi_O_develop/DEFAULTINSTALLDIR/lib/libO/Linux.intel.64.intelmpi.default build_preload_script
make[1]: Entering directory `/scratch/users/mpotts/intel_2019.0.5_intelmpi_O_develop'
chmod 755 /scratch/users/mpotts/intel_2019.0.5_intelmpi_O_develop/DEFAULTINSTALLDIR/lib/libO/Linux.intel.64.intelmpi.default/preload.sh
make[1]: Leaving directory `/scratch/users/mpotts/intel_2019.0.5_intelmpi_O_develop'
ranlib /scratch/users/mpotts/intel_2019.0.5_intelmpi_O_develop/DEFAULTINSTALLDIR/lib/libO/Linux.intel.64.intelmpi.default/libesmf*.a
make install_apps
make[1]: Entering directory `/scratch/users/mpotts/intel_2019.0.5_intelmpi_O_develop'
mkdir -p /scratch/users/mpotts/intel_2019.0.5_intelmpi_O_develop/DEFAULTINSTALLDIR/bin/binO/Linux.intel.64.intelmpi.default
make build_apps ESMF_APPSDIR=/scratch/users/mpotts/intel_2019.0.5_intelmpi_O_develop/DEFAULTINSTALLDIR/bin/binO/Linux.intel.64.intelmpi.default ESMF_LDIR=/scratch/users/mpotts/intel_2019.0.5_intelmpi_O_develop/DEFAULTINSTALLDIR/lib/libO/Linux.intel.64.intelmpi.default ESMF_LIBDIR=/scratch/users/mpotts/intel_2019.0.5_intelmpi_O_develop/DEFAULTINSTALLDIR/lib/libO/Linux.intel.64.intelmpi.default ESMF_MODDIR=/scratch/users/mpotts/intel_2019.0.5_intelmpi_O_develop/DEFAULTINSTALLDIR/mod/modO/Linux.intel.64.intelmpi.default
make[2]: Entering directory `/scratch/users/mpotts/intel_2019.0.5_intelmpi_O_develop'
cd /scratch/users/mpotts/intel_2019.0.5_intelmpi_O_develop/src/apps; make ACTION=tree_build_apps tree
make[3]: Entering directory `/scratch/users/mpotts/intel_2019.0.5_intelmpi_O_develop/src/apps'
tree_build_apps in: /scratch/users/mpotts/intel_2019.0.5_intelmpi_O_develop/src/apps/ESMF_PrintInfo
make[4]: Entering directory `/scratch/users/mpotts/intel_2019.0.5_intelmpi_O_develop/src/apps/ESMF_PrintInfo'
make chkdir_locobj
make[5]: Entering directory `/scratch/users/mpotts/intel_2019.0.5_intelmpi_O_develop/src/apps/ESMF_PrintInfo'
Making directory /scratch/users/mpotts/intel_2019.0.5_intelmpi_O_develop/obj/objO/Linux.intel.64.intelmpi.default/src/apps/ESMF_PrintInfo for apps output
make[5]: Leaving directory `/scratch/users/mpotts/intel_2019.0.5_intelmpi_O_develop/src/apps/ESMF_PrintInfo'
mpiifort -c -O -fPIC -assume realloc_lhs -m64 -mcmodel=small -pthread -threads  -qopenmp -I/scratch/users/mpotts/intel_2019.0.5_intelmpi_O_develop/src/apps/ESMF_PrintInfo -I/scratch/users/mpotts/intel_2019.0.5_intelmpi_O_develop/build_config/Linux.intel.default -I/scratch/users/mpotts/intel_2019.0.5_intelmpi_O_develop/src/Infrastructure -I/scratch/users/mpotts/intel_2019.0.5_intelmpi_O_develop/src/Superstructure -I/scratch/users/mpotts/intel_2019.0.5_intelmpi_O_develop/DEFAULTINSTALLDIR/mod/modO/Linux.intel.64.intelmpi.default -I/scratch/users/mpotts/intel_2019.0.5_intelmpi_O_develop/src/include -I/opt/netcdf4/4.7.3-intel-19.0.5/include -I/opt/netcdf4/4.7.3-intel-19.0.5/include  -DESMF_NO_INTEGER_1_BYTE -DESMF_NO_INTEGER_2_BYTE -DESMF_VERSION_STRING_GIT='"ESMF_8_2_0_beta_snapshot_20-18-g0aeed17"' -DESMF_MOAB=1 -DESMF_LAPACK=1 -DESMF_LAPACK_INTERNAL=1 -DESMF_NO_ACC_SOFTWARE_STACK=1 -DESMF_NETCDF=1 -DESMF_YAMLCPP=1 -DESMF_YAML=1 -DESMF_PIO=1 -DESMF_MPIIO -DESMF_NO_OPENACC -DESMF_TESTEXHAUSTIVE -DESMF_BOPT_O -DESMF_TESTCOMPTUNNEL -DESMF_TESTWITHTHREADS -DSx86_64_small=1 -DESMF_OS_Linux=1 -DESMF_COMM=intelmpi -DESMF_DIR=/scratch/users/mpotts/intel_2019.0.5_intelmpi_O_develop ESMF_PrintInfo.F90 -o /scratch/users/mpotts/intel_2019.0.5_intelmpi_O_develop/obj/objO/Linux.intel.64.intelmpi.default/src/apps/ESMF_PrintInfo/ESMF_PrintInfo.o
make chkdir_apps
make[5]: Entering directory `/scratch/users/mpotts/intel_2019.0.5_intelmpi_O_develop/src/apps/ESMF_PrintInfo'
make[5]: Leaving directory `/scratch/users/mpotts/intel_2019.0.5_intelmpi_O_develop/src/apps/ESMF_PrintInfo'
mpiifort    -m64 -mcmodel=small -pthread -threads -Wl,--no-as-needed  -qopenmp -L/scratch/users/mpotts/intel_2019.0.5_intelmpi_O_develop/DEFAULTINSTALLDIR/lib/libO/Linux.intel.64.intelmpi.default -L/opt/netcdf4/4.7.3-intel-19.0.5/lib -L/opt/netcdf4/4.7.3-intel-19.0.5/lib -L/opt/netcdf4/4.7.3-intel-19.0.5/lib  -Wl,-rpath,/scratch/users/mpotts/intel_2019.0.5_intelmpi_O_develop/DEFAULTINSTALLDIR/lib/libO/Linux.intel.64.intelmpi.default -Wl,-rpath,/opt/netcdf4/4.7.3-intel-19.0.5/lib -Wl,-rpath,/opt/netcdf4/4.7.3-intel-19.0.5/lib -Wl,-rpath,/opt/netcdf4/4.7.3-intel-19.0.5/lib -o /scratch/users/mpotts/intel_2019.0.5_intelmpi_O_develop/DEFAULTINSTALLDIR/bin/binO/Linux.intel.64.intelmpi.default/ESMF_PrintInfo /scratch/users/mpotts/intel_2019.0.5_intelmpi_O_develop/obj/objO/Linux.intel.64.intelmpi.default/src/apps/ESMF_PrintInfo/ESMF_PrintInfo.o -lesmf  -cxxlib -lrt -ldl -lnetcdf -lnetcdff -lnetcdf -lnetcdf
make[4]: Leaving directory `/scratch/users/mpotts/intel_2019.0.5_intelmpi_O_develop/src/apps/ESMF_PrintInfo'
tree_build_apps in: /scratch/users/mpotts/intel_2019.0.5_intelmpi_O_develop/src/apps/ESMF_PrintInfoC
make[4]: Entering directory `/scratch/users/mpotts/intel_2019.0.5_intelmpi_O_develop/src/apps/ESMF_PrintInfoC'
make chkdir_locobj
make[5]: Entering directory `/scratch/users/mpotts/intel_2019.0.5_intelmpi_O_develop/src/apps/ESMF_PrintInfoC'
Making directory /scratch/users/mpotts/intel_2019.0.5_intelmpi_O_develop/obj/objO/Linux.intel.64.intelmpi.default/src/apps/ESMF_PrintInfoC for apps output
make[5]: Leaving directory `/scratch/users/mpotts/intel_2019.0.5_intelmpi_O_develop/src/apps/ESMF_PrintInfoC'
mpiicpc -c -std=c++11 -O -DNDEBUG -fPIC -m64 -mcmodel=small -pthread  -qopenmp -I/scratch/users/mpotts/intel_2019.0.5_intelmpi_O_develop/src/apps/ESMF_PrintInfoC -I/scratch/users/mpotts/intel_2019.0.5_intelmpi_O_develop/src/apps/ESMF_PrintInfoC/../include -I/scratch/users/mpotts/intel_2019.0.5_intelmpi_O_develop/build_config/Linux.intel.default -I/scratch/users/mpotts/intel_2019.0.5_intelmpi_O_develop/src/Infrastructure -I/scratch/users/mpotts/intel_2019.0.5_intelmpi_O_develop/src/Superstructure -I/scratch/users/mpotts/intel_2019.0.5_intelmpi_O_develop/src/Infrastructure/stubs/pthread  -I/scratch/users/mpotts/intel_2019.0.5_intelmpi_O_develop/src/include  -I/opt/netcdf4/4.7.3-intel-19.0.5/include -I/scratch/users/mpotts/intel_2019.0.5_intelmpi_O_develop/src/prologue/yaml-cpp/include -DESMF_NO_INTEGER_1_BYTE -DESMF_NO_INTEGER_2_BYTE -DESMF_VERSION_STRING_GIT='"ESMF_8_2_0_beta_snapshot_20-18-g0aeed17"' -DESMF_MOAB=1 -DESMF_LAPACK=1 -DESMF_LAPACK_INTERNAL=1 -DESMF_NO_ACC_SOFTWARE_STACK=1 -DESMF_NETCDF=1 -DESMF_YAMLCPP=1 -DESMF_YAML=1 -DESMF_PIO=1 -DESMF_MPIIO -DESMF_NO_OPENACC -DESMF_TESTEXHAUSTIVE -DESMF_BOPT_O -DESMF_TESTCOMPTUNNEL -DESMF_TESTWITHTHREADS -DSx86_64_small=1 -DESMF_OS_Linux=1 -DESMF_COMM=intelmpi -DESMF_DIR=/scratch/users/mpotts/intel_2019.0.5_intelmpi_O_develop -D__SDIR__='"src/apps/ESMF_PrintInfoC"' -DESMF_CXXSTD=11 ESMF_PrintInfoC.c -o /scratch/users/mpotts/intel_2019.0.5_intelmpi_O_develop/obj/objO/Linux.intel.64.intelmpi.default/src/apps/ESMF_PrintInfoC/ESMF_PrintInfoC.o
icc: command line warning #10370: option '-std=c++11' is not valid for C compilations
In file included from /scratch/users/mpotts/intel_2019.0.5_intelmpi_O_develop/src/include/ESMC.h(46),
                 from ESMF_PrintInfoC.c(14):
/scratch/users/mpotts/intel_2019.0.5_intelmpi_O_develop/src/include/ESMC_Mesh.h(66): error: identifier "bool" is undefined
    bool moabOn,
    ^

In file included from /scratch/users/mpotts/intel_2019.0.5_intelmpi_O_develop/src/include/ESMC.h(46),
                 from ESMF_PrintInfoC.c(14):
/scratch/users/mpotts/intel_2019.0.5_intelmpi_O_develop/src/include/ESMC_Mesh.h(93): error: identifier "bool" is undefined
    bool moabOn,
    ^

compilation aborted for ESMF_PrintInfoC.c (code 2)
make[4]: *** [/scratch/users/mpotts/intel_2019.0.5_intelmpi_O_develop/obj/objO/Linux.intel.64.intelmpi.default/src/apps/ESMF_PrintInfoC/ESMF_PrintInfoC.o] Error 2
make[4]: Leaving directory `/scratch/users/mpotts/intel_2019.0.5_intelmpi_O_develop/src/apps/ESMF_PrintInfoC'
make[3]: *** [tree] Error 1
make[3]: Leaving directory `/scratch/users/mpotts/intel_2019.0.5_intelmpi_O_develop/src/apps'
make[2]: *** [build_apps] Error 2
make[2]: Leaving directory `/scratch/users/mpotts/intel_2019.0.5_intelmpi_O_develop'
make[1]: *** [install_apps] Error 2
make[1]: Leaving directory `/scratch/users/mpotts/intel_2019.0.5_intelmpi_O_develop'
make: *** [install] Error 2
